# Examen-parcial-Roberto-Cardenas

./: CMakeLists.txt  README.md  main.cpp  main.h
EJERCICIO 1/: numero.cpp  numero.h
EJERCICIO 2/: dia.cpp  dia.h
EJERCICIO 3/: calificaciones.cpp  calificaciones.h
EJERCICIO 4/: promocion.cpp  promocion.h
